# djongo

./: .gitignore  Dockerfile  docker-compose.yml
.github/workflows/: run_tests.yaml
pkg/: pyproject.toml  setup.py
pkg/djongo/: base.py
pkg/tests/test_app/: runtests.py
pkg/tests/test_app/test_app/: settings.py  urls.py
pkg/tests/test_app/user/: apps.py  models.py  tests.py  urls.py  views.py
